# neoradar-ccams

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
sdk/: Aircraft.h  Airport.h  Chat.h  Controller.h  ControllerData.h  EuroScope.h  Flightplan.h  Fsd.h  Logger.h  SDK.h  Sectors.h  Squawk.h  Tag.h  TextMessage.h
src/: NeoCCAMS.cpp  NeoCCAMS.h  SquawkProvider.cpp  SquawkProvider.h  main.cpp
